Fix title spacing

--- a/resources/assets/sass/_spacing.scss
+++ b/resources/assets/sass/_spacing.scss
@@ -18,6 +18,10 @@
   margin-bottom: 2rem !important;
 }
 
+.mt-none {
+  margin-top: 0!important;
+}
+
 .mt-0 {
   margin-top: .5rem;
 }
